# terraform-provider-ytmusic

./: .gitignore  LICENSE  Makefile  README.md  a.txt  go.mod  main.go  parse_a_txt.py
examples/: .terraform.lock.hcl  cookies.txt.example  main.tf  terraform.tfstate.1782782088.backup  tfplan
genre-to-playlist/: Cargo.toml
genre-to-playlist/genres/: black_metal.json  death_metal.json  doom_metal.json  goregrind.json  power_metal.json  sasscore.json  skramz.json  thrash_metal.json
genre-to-playlist/src/: genre_validator.rs  main.rs
provider/: data_source_search.go  provider.go  resource_playlist.go  ytmusic_client.go
rym-to-genre/: Cargo.toml
rym-to-genre/src/: main.rs
ytmusic-cli/: Cargo.toml
ytmusic-cli/src/: main.rs
