[package]
name = "genre-to-playlist"
version = "0.1.0"
edition = "2021"
description = "Generate balanced YouTube Music playlists from genre band lists"

[dependencies]
ytmapi-rs = { path = "/home/caos/builds/youtui/ytmapi-rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
