[package]
name = "ytmusic-cli"
version = "0.1.0"
edition = "2021"
description = "JSON-in/JSON-out sidecar for terraform-provider-ytmusic"

[dependencies]
ytmapi-rs = { path = "/home/caos/builds/youtui/ytmapi-rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
